--- a/style1.css
+++ b/style1.css
@@ -9,7 +9,8 @@
 body {
   background-color: #d8f3dc;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding: 1rem;
+  /* padding: 1rem; */
+
 }
 
 /* Headline */
